About_mdx update#1

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -92,7 +92,7 @@ Thank you for trying this out! I'm still constantly shipping new updates to this
 
 You can support this project by:
 
-- Raise issues on [Github](https://github.com/juxtdesigncc/gatsby-starter-obsidian-garden/issues) if you catch any bugs
-- Submit a [PR](https://github.com/juxtdesigncc/gatsby-starter-obsidian-garden/pulls) if you discovered a solution
-- Share this project on Twitter and tag [me](https://twitter.com/juxtdesigncc)!
-- Give me a star on [Github](https://github.com/juxtdesigncc/gatsby-starter-obsidian-garden/)
+- Raise issues on [Github](https://github.com/MorbeusDesign/themorbeusgarden/issues) if you catch any bugs
+- Submit a [PR](https://github.com/MorbeusDesign/themorbeusgarden/pulls) if you discovered a solution
+- Share this project on Twitter and tag [me](https://twitter.com/MorbeusDesign)!
+- Give me a star on [Github](https://github.com/MorbeusDesign/themorbeusgarden/pulls/)
